# fairmath-cli

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  config.h  configProcessor.h  fairmath_cli.cpp  readme.md  run.sh  utils.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: pr.yml  release.yml
data/input/: config.json
data/output/: ciphertext_1  ciphertext_2  config.json  cryptocontext_name  mult_key_name  private_key_name  public_key_name
example/: run_ciphertext_decryption.sh  run_config_processing.sh  run_decrypt_mode.sh  run_generate_mode.sh
src/: configProcessor.h  fairmathCli.cpp  utils.h
